@@ -1,7 +1,8 @@
 ++ Scheduler 1.1.0-pl
 ++ Released on
 +++++++++++++++++++++++++
-- sTask->schedule now returns the sTaskRun object
+- sTask->schedule now returns the sTaskRun object on success
+- Fix potential issue when sTaskRun.data isn't an array (#15)
 
 ++ Scheduler 1.0.2-pl
 ++ Released on 2014-05-29
